--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="admin_panel">Admin Panel</string>
     <string name="manage_users">Manage Users</string>
     <string name="manage_car_brands">Manage Car Brands</string>
+    <string name="manage_cars">Manage Cars</string>
 </resources>
